Edidot Preview: Fix - Minimize the editor window caused to page content to collapsed

--- a/assets/dev/scss/editor/_devices.scss
+++ b/assets/dev/scss/editor/_devices.scss
@@ -26,10 +26,6 @@ body {
 	height: 100%;
 	border: 0;
 	width: var(--e-preview-width);
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
 }
 
 #elementor-preview-responsive-wrapper {
